# HiLyte

./: README.md  cookies.txt  package-lock.json  package.json  pyproject.toml  test_flask_backend.py
backend/: init_db.py  models.py
backend/blueprints/: integrations.py
backend/services/: ai_extraction_service.py  credit_service.py
client/src/: App.tsx  index.css
client/src/components/: AITrainingControls.tsx  OnboardingTour.tsx  (+13 more)
koncurent-clean-code/: .env.example  .replit  replit.md
koncurent-clean-code/client/: index.html
koncurent-clean-code/server/: ai-credit-service.ts  ai-extraction-service.ts  enhanced-nlp-service.ts  index.ts  ocr-smart-extraction-service.ts  pdf-text-extractor.ts  revision-comparison-service.ts  sheet-metadata-service.ts  upload-optimizer.ts
koncurent-clean-code/shared/: types.ts
koncurent-hi-lyte-clean/: README_FLASK.md  run_flask.py
koncurent-hi-lyte-clean/.upm/: store.json
koncurent-hi-lyte-clean/backend/: app.py  config.py  extensions.py
koncurent-hi-lyte-clean/server/: beta-feedback-service.ts  beta-invitation-service.ts  division-extraction-service.ts  email-service.ts  extraction-engine.ts  ocr-service.ts  pdf-processor.ts  procurement-analysis-service.ts  routes.ts  simple-storage.ts  smart-extraction-service.ts  verification-service.ts
server/: ai-template-service.ts  ai-training-service.ts  error-logger.ts  extraction-template-service.ts  hybrid-smart-extraction-service.ts  procurement-extraction-service.ts  real-verification-service.ts  routes.ts.backup  storage.ts  subscription-seeder.ts
shared/: schema.ts
(+77 files in other folders)
